

Table categories {
  category_id int [pk]
  category_name varchar(100)
  description text
}

Table products {
  product_id int [pk]
  product_name varchar(150)
  category_id int
  unit_price decimal(12,2)
  cost_price decimal(12,2)
  stock_quantity int
  is_active tinyint
}

Table customers {
  customer_id int [pk]
  first_name varchar(100)
  last_name varchar(100)
  email varchar(150)
  phone varchar(30)
  city varchar(100)
  registration_date date
  loyalty_tier varchar(50)
}

Table sales_transactions {
  transaction_id int [pk]
  customer_id int [null]
  store_id int
  transaction_date date
  transaction_time time
  payment_method varchar(50)
  total_amount decimal(14,2)
  discount_amount decimal(14,2)
  tax_amount decimal(14,2)
  net_amount decimal(14,2)
}

Table sales_items {
  item_id int [pk]
  transaction_id int
  product_id int
  quantity int
  unit_price decimal(12,2)
  line_total decimal(14,2)
}

Table vouchers {
  voucher_id int [pk]
  voucher_code varchar(50)
  voucher_type varchar(20)
  discount_value decimal(12,2)
  min_purchase_amount decimal(14,2)
  max_discount_amount decimal(14,2) [null]
  valid_from date
  valid_to date
  is_active tinyint
}

Table voucher_redemptions {
  redemption_id int [pk]
  voucher_id int
  transaction_id int
  customer_id int
  redemption_date date
  discount_applied decimal(12,2)
}

Table returns {
  return_id int [pk]
  transaction_id int
  item_id int
  customer_id int
  product_id int
  return_date date
  return_quantity int
  return_reason varchar(255)
  refund_amount decimal(14,2)
  refund_status varchar(50)
}

Ref: products.category_id > categories.category_id
Ref: sales_transactions.customer_id > customers.customer_id
Ref: sales_items.transaction_id > sales_transactions.transaction_id
Ref: sales_items.product_id > products.product_id
Ref: voucher_redemptions.voucher_id > vouchers.voucher_id
Ref: voucher_redemptions.transaction_id > sales_transactions.transaction_id
Ref: voucher_redemptions.customer_id > customers.customer_id
Ref: returns.transaction_id > sales_transactions.transaction_id
Ref: returns.item_id > sales_items.item_id
Ref: returns.customer_id > customers.customer_id
Ref: returns.product_id > products.product_id
